--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -7,51 +6,47 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: url('/img/img_fundo2.jpg') no-repeat center center fixed;
-  background-size: cover;
+  background: url('../public/img/foto_fundo.jpg') no-repeat center center fixed;
+  background-size: auto 150%;
   color: #000000;
   line-height: 1.6;
 }
 
-
-/* Header */
-header {
-  background-color: #800020;
-  color: #ffffff;
-  padding: 30px 20px;
+/* Banner */
+.welcome-banner {
+  background: url('#') no-repeat center center;
+  background-size: cover;
+  height: 60vh;
   display: flex;
-  justify-content: space-between; /* separa título e menu */
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  position: relative;
 }
 
-header h1 {
+.banner-content {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 30px;
+  border-radius: 10px;
+}
+
+.welcome-banner h2 {
   font-size: 2.5rem;
   margin-bottom: 10px;
 }
 
-nav {
-  display: flex;
-  gap: 15px;
-}
-
-
-nav a {
-  color: #ffffff;
-  text-decoration: none;
-  margin: 0 15px;
-  font-weight: bold;
-}
-
-nav a:hover {
-  color: #ffcccc;
+.welcome-banner p {
+  font-size: 1.2rem;
 }
 
 /* Sessões */
 .section {
+  background-color: rgba(255, 255, 255, 0.85);
   padding: 40px 20px;
+  border-radius: 10px;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 .section h2 {
@@ -60,7 +55,8 @@ nav a:hover {
   color: #800020;
 }
 
-.section p, .section li {
+.section p,
+.section li {
   font-size: 1.1rem;
   margin-bottom: 10px;
 }
@@ -100,3 +96,5 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+
